	* Modified 'scripts/installer_install_rivendell.sh' to add the 'rd'
	user to the 'audio' group.
2023-01-05 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.3jammy
2023-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the installation scripts to generate and apply a
	cryptographically strong password for MariaDB access when using
	'--standalone' and --server' modes.
	* Refactored the installation scripts to prompt for the MariaDB
	accound parameters when using '--client' mode.
2023-02-27 Fred Gleason <fredg@paravelsystems.com>
	* Corrected the installation location of '90-rivendell.cnf'.
2023-02-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in 'repo/install_rivendell.sh' that broke
	the '--client' mode.
2023-02-27 Fred Gleason <fredg@paravelsystems.com>
	* Updated the installation HOWTO.
2023-02-27 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make post' target in 'docs/Makefile.am'.
2023-03-29 Fred Gleason <fredg@paravelsystems.com>
	* Removed the default skins for rdairplay(1) and rdpanel(1).
2023-06-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.0.0jammy
2023-06-09 Fred Gleason <fredg@paravelsystems.com>
	* Added 'libmad0', 'libtwolame0' and 'libmp3lame0' to the set of
	package dependencies.
2023-06-09 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.0.1jammy
2023-06-16 Fred Gleason <fredg@paravelsystems.com>
	* Removed the Release Candidate warning from the installation HOWTO
2023-11-21 Fred Gleason <fredg@paravelsystems.com>
	* Added 'docs/mint21_cleanups.txt'.
2023-12-07 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'Power Manager' from the list of services to be disabled
	in 'docs/mint21_cleanups.txt'.
2024-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Added 'paravelview' and 'lwmon' packages to the base installation.
2024-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.1.0jammy